# spaceflightnewsapi

./: .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  techstack.md  techstack.yml
.github/workflows/: main.yml
api/: admin.py  settings.py
api/article/config/: routes.json
api/article/documentation/3.4.0/: article.json
api/blog/config/: routes.json
api/blog/documentation/3.4.0/: blog.json
api/info/config/: routes.json
api/info/documentation/3.4.0/: info.json
api/report/config/: routes.json
api/report/documentation/3.4.0/: report.json
api/tasks/: snapi.py
config/: server.js
extensions/documentation/config/: settings.json
extensions/documentation/documentation/3.4.0/: full_documentation.json
extensions/documentation/public/: index.html
snapy/: settings.py  urls.py
