[tool.poetry]
name = "snapy"
version = "4"
description = ""
authors = ["Derk Weijers <derk@weijers.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "~5.0"
djangorestframework = "^3.14.0"
markdown = "^3.5.2"
django-filter = "^24.1"
pyyaml = "^6.0"
uritemplate = "^4.1.1"
celery = "^5.3.6"
httpx = "^0.27.0"
django-celery-beat = "^2.6.0"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.1"
django-celery-results = "^2.4.0"
gunicorn = "^22.0.0"
sentry-sdk = "^2.4.0"
dj-database-url = "^2.0.0"
django-minio-backend = "^3.5.0"
ruff = "^0.3.2"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django-stubs = { extras = ["compatible-mypy"], version = "^4.2.3" }
black = "^24.4.0"
isort = "^5.13.2"
djangorestframework-stubs = "^3.14.5"
celery-stubs = "^0.1.3"
django-filter-stubs = "^0.1.2"
coverage = "^7.4.3"
mypy = "^1.3.0"
bandit = { extras = ["toml"], version = "^1.7.8" }
pytest-django = "^4.8.0"
pytest-env = "^1.1.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pyupgrade = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "snapy.settings"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]

[tool.ruff]
extend-exclude = ["snapy/settings.py"]

[tool.bandit]
exclude_dirs = ["tests/", ".github/", ".venv/"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "snapy.settings"
env = [
    "SECRET_KEY=dummy-secret-key",
    "DATABASE_URL=sqlite://:memory:",
    "SNAPI_VERSION=v1.2.3"
]
